--- a/src/Components/Assets/style.css
+++ b/src/Components/Assets/style.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Indie+Flower&family=Montserrat:wght@200&family=Neucha&display=swap");
 
 .bg {
-  height: 100%;
-  min-width: 100%;
-  width: auto;
+  min-height: 100%;
+  height: auto;
+  width: 100%;
   position: absolute;
   z-index: -1;
 }
